src/test/deca/syntax/parser/invalid/decl_var_wrong_equal_number.deca
// Test de parser, un symbole spécial remplace le symbole
// égal, ici un nombre

{
    int x 14 5;
}